# 2025-P8-zaidulalam

./: README.md  docker-compose.yaml  ecs.tf  main.tf  pyproject.toml
